--- a/_posts/2017-03-22-sqlite3.md
+++ b/_posts/2017-03-22-sqlite3.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  "sqlite3模块的使用"
-categories: Python
-tags: Python sqlite3
+categories: python
+tags: python sqlite3
 excerpt: 简单介绍在Python中使用sqlite3保存本地数据的方法。
 ---
 
@@ -22,11 +22,15 @@ conn = sqlite3.connect("data.db")
 conn.close()
 ```
 可以使用`:memory:`作为参数，表示数据库保存在内存中
-```conn = sqlite3.connect(":memory:")```
+```python
+conn = sqlite3.connect(":memory:")
+```
 
 ## 创建游标
 对数据库的所有操作都是通过游标实现的，游标有点类似于文件操作中的文件句柄。通过下面的方法可以创建游标。  
-```c = conn.cursor()```
+```python
+c = conn.cursor()
+```
 
 ## 创建数据表
 下面的语句创建了一张含有date，trans，symbol，qty和price这5个数据的表。
@@ -69,6 +73,7 @@ c.execute("SELECT date, price FROM stocks WHERE symbol = 'IBM'")
 ```
 有三种方法可以用来操作SELECT语句查询的数据
 - 将查询结果当做迭代器使用
+
 ```python
 for row in c.execute('SELECT * FROM stocks ORDER BY price'):
     print(row)
@@ -78,7 +83,9 @@ for row in c.execute('SELECT * FROM stocks ORDER BY price'):
 ('2006-04-06', 'SELL', 'IBM', 500, 53.0)
 ('2006-04-05', 'BUY', 'MSFT', 1000, 72.0)
 ```
+
 - 使用游标的`fetchone()`方法，该方法获取查询结果集中的下一行，返回一个单一的序列，当没有更多可用的数据时，则返回 None。
+
 ```python
 c.execute('SELECT date, symbol, price FROM stocks WHERE symbol = "RHAT"')
 res = c.fetchone()
@@ -94,7 +101,9 @@ res = c.fetchone()
 print(res)
 None
 ```
+
 - 使用游标的`fetchall()`方法，该方法获取查询结果集中所有（剩余）的行，返回一个列表。当没有可用的行时，则返回一个空的列表。
+
 ```python
 c.execute('SELECT * FROM stocks ORDER BY price')
 res = c.fetchall()
@@ -118,6 +127,7 @@ print "Total number of rows deleted :", conn.total_changes
 
 ## 提交和回滚
 `commit()`：用于提交当前的事务。如果未调用该方法，那么自上一次调用`commit()`以来所做的任何动作对其他数据库连接来说是不可见的。
+
 `rollback()`：用于取消自上一次调用`commit()`以来对数据库所做的更改。
 
 ## 其它
