拼写错误修正

--- a/_posts/2017-03-23-cygwin.md
+++ b/_posts/2017-03-23-cygwin.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Cygwind的使用"
+title:  "Cygwin的使用"
 categories: Tools
 tags: tools cygwin
 excerpt: cygwin的一些使用技巧。
@@ -12,6 +12,6 @@ excerpt: cygwin的一些使用技巧。
 Cygwin是一个Windows下的仿Linux环境的工具，通过它可以在Windows使用强大的Bash，以及使用数量繁多的Linux命令。
 
 ## 设置代理
-在bash_profile种添加下面的语句：
+在bash_profile中添加下面的语句：
 export http_proxy=http://username:password@host:port/
 
